kubernetes/apps/databases/mariadb/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maxscale
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      port: 443
  hostnames:
    - maxscale.smbonn.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31449600; includeSubDomains"
      backendRefs:
        - name: maxscale-gui
          port: 8989
